# MARRVEL_MCP

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_DBNSFP_FIX.md  CODE_CHANGE_ANALYSIS.md  CONTRIBUTING.md  DBNSFP_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_SERIALIZATION.md  LLM_PROVIDERS_GUIDE.md  MANIFEST.in  OPENAI_INTEGRATION.md  OPENAI_INTEGRATION_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  PULL_REQUEST.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  START_HERE.md  TOOL_REFERENCE.md  VERIFY_SERIALIZATION_IN_HTML.md  config.py  install.sh  llm_config.py  llm_providers.py  mcp.json  modify_pkl.py  pyproject.toml  pytest.ini  quick_start.sh  requirements.txt  run_benchmark.sh  run_mcpo.sh  server.json  server.py  server_new.py  (+6 more)
.github/: ISSUE_CONTENT.md  ISSUE_TEMPLATE.md  PR_DESCRIPTION.md  copilot-instructions.md
.github/scripts/: capture_api_responses.py  generate_test_summary.py
.github/workflows/: ci.yml  pre-commit.yml  publish-mcp.yml
assets/: evaluation_report_template.html
config/: __init__.py  llm_config.py  llm_providers.py
docs/: API_CAPTURE_FLOW.md  API_DOCUMENTATION.md  API_RESPONSE_CAPTURE.md  API_RESPONSE_FORMAT_COMPARISON.md  API_RESPONSE_FORMAT_EXAMPLE.txt  ARCHITECTURE.md  BENCHMARK_WORKFLOW.md  PUBMED_TOOLS.md  REFACTORING_SUMMARY.md  STRING_ENSP_HANDLING.md  TOOL_RELATIONSHIPS.md  TOOL_RELATIONSHIPS_DETAILED.md
examples/: example_queries.py
examples/openai/: README.md  openai_marrvel_example.py  openai_marrvel_simple.py
marrvel_mcp/: README.md  __init__.py  agentic_loop.py  client.py  config.py  cost_tracking.py  langchain_serialization.py  server.py  tool_calling.py
mcp-llm-test/: README.md  REFACTORING_NOTES.md  agentic_loop.py  check_web_search.py  evaluate_mcp.py  list_openrouter_models.py  models_config.yaml  test_cases.yaml  test_progress_changes.py
mcp_agent/: README.md  __init__.py  agentic_loop.py
mcp_llm_test/: README.md  REFACTORING_NOTES.md  analyze_results.py  check_web_search.py  evaluate_mcp.py  evaluate_mcp_new.py  export_json.py  get_model_configs.py  local_api_config.yaml  models_config.yaml  test_cases.yaml
notebooks/: model_compare.ipynb
src/: __init__.py  server.py
test-output/: README.md
tests/: ESSENTIAL_TESTS.md  README.md  conftest.py  conftest_api_capture.py  test_500_error_logging.py  test_api_client.py  test_api_direct.py  test_cache_essential.py  test_cache_functions.py  test_caching.py  test_caching_functionality.py  test_concurrency_and_progress.py  test_cost_tracking.py  test_disease_tools.py  test_evaluate_cache.py  test_evaluate_cli.py  test_evaluate_mcp_subset.py  test_expression_tools.py  test_gene_tools.py  test_html_report_generation.py  test_llm_provider_config.py  test_mcp_client.py  test_null_responses.py  test_openrouter_model_config.py  test_ortholog_tools.py  test_retry_essential.py  test_retry_logic.py  test_server.py  test_server_integration.py  test_string_ensp_handling.py  test_subset_essential.py  test_subset_parsing.py  test_token_usage_counting.py  test_tools_smoke.py  test_utility_tools.py  test_variant_tools.py
(+49 files in other folders)
