[project]
name = "marrvel-mcp"
version = "0.1.0"
description = "MARRVEL MCP server providing 35+ tools for rare disease genetics research"
requires-python = ">=3.12"
dependencies = [
    # MCP server framework
    "fastmcp>=3.0.0b1",
    # HTTP client with retry
    "httpx>=0.27.0",
    "httpx-retry>=0.1.0",
    # SSL certificates
    "certifi>=2023.7.22",
    # PubMed / XML parsing
    "pymed_paperscraper>=0.1.0",
    "lxml",
]

[project.optional-dependencies]
# Dependencies for the agentic loop / LLM evaluation framework
eval = [
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-aws>=1.0.0",
    "boto3>=1.42.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.66.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
marrvel-mcp = "marrvel_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-html>=4.1.0",
    "pytest-json-report>=1.5.0",
    "pytest-cov>=4.1.0",
    "pytest-md>=0.2.0",
    "pytest-emoji>=0.2.0",
    "black>=24.0.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | \.pytest_cache
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (may be slow)",
]
